# neurolabel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  atlas_overlap.ipynb  environment.yml  neurolabel.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: atlas_overlap-checkpoint.ipynb
docs/: adding-a-provider.md  architecture.md  atlas-contract.md  evidence-contract.md
parcellations/neurosynth/: neurosynth100_centroids.csv  neurosynth200_centroids.csv
scripts/: audit_atlases.py
src/: atlas.py  atlas_examples.ipynb  calc_centroid.ipynb  discrete_functional_decoder.ipynb  functional_decoder.py  utils.py
src/.ipynb_checkpoints/: utils-checkpoint.py
src/neurolabel/: __init__.py  atlas.py  functional_decoder.py  utils.py  visualization.py  workflow.py
src/neurolabel/core/: __init__.py  _version.py  atlas.py  audit.py  errors.py  exceptions.py  extraction.py  geometry.py  models.py  parcel.py  provenance.py  specification.py  validation.py
src/neurolabel/evidence/: __init__.py  models.py  provider.py
src/neurolabel/resources/: __init__.py
src/neurolabel/resources/atlases/: neurosynth_k100.toml  neurosynth_k200.toml  neurosynth_k50.toml
tests/: conftest.py  test_atlas.py  test_bundled_atlases.py  test_evidence_contract.py  test_extraction.py  test_geometry.py  test_provenance.py  test_validation.py
