[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurolabel"
version = "0.1.0.dev0"
description = "Evidence-based anatomical and functional characterization of brain parcels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nibabel>=5.0",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["neurolabel*"]

[tool.setuptools.package-data]
neurolabel = ["*.toml", "**/*.toml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=neurolabel",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=85",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["neurolabel"]
omit = ["*.ipynb", "*/notebooks/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
docstring-code-format = true
