@ -0,0 +1,35 @@
[project]
name = "neurolabel"
version = "0.0.1"
authors = [
  { name="Amisha Vyas", email="yamisha.vyas@columbia.edu" },
  { name="Mia Casburn", email="m.casburn1@universityofgalway.ie" },
  { name="Hyesun Choi", email="hchoi@mrn.org" },
  { name="Anna Isberg", email="aei00004@mix.wvu.edu" },
  { name="Alex Litovchenko", email="al4877@columbia.edu" },
  { name="Kaitlyn Mundy", email="km3963@columbia.edu" },
  { name="Rajikha Raja", email="rajikha.raja@stjude.org" },
  { name="Lara Ressin", email="L.Ressin1@universityofgalway.ie" },
  { name="America Romero", email="america@uoregon.edu" },
]
description = "A python package to generate anatomical and functional labels for Neurosynth parcellations."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "pandas",
    "nilearn",
    "nibabel",
]
[project.urls]
Homepage = "https://github.com/amishavyas/neurolabel"
PyPi = "https://pypi.org/project/neurolabel/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
